[metadata]
name = openstack-resource-optimization-ai-plugin
version = 0.1
description = Un plugin AI per ottimizzare la gestione delle risorse in OpenStack

[options]
packages = find:
install_requires =
    scikit-learn
    numpy

[entry_points]
console_scripts =
    optimize_resources = main:optimize_resources
